add login ui, file transfer
